--- a/package.json
+++ b/package.json
@@ -1,34 +1,36 @@
 {
-  "name": "SecurityBSides",
-  "version": "1.0.0",
-  "private": true,
-  "description": "SecurityBSides",
-  "author": "rlc4",
-  "keywords": [
-    "gatsby"
-  ],
-  "scripts": {
-    "develop": "gatsby develop",
-    "start": "gatsby develop",
-    "build": "gatsby build",
-    "serve": "gatsby serve",
-    "clean": "gatsby clean"
-  },
-  "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.4.2",
-    "@fortawesome/free-brands-svg-icons": "^6.4.2",
-    "@fortawesome/free-regular-svg-icons": "^6.4.2",
-    "@fortawesome/free-solid-svg-icons": "^6.4.2",
-    "@fortawesome/react-fontawesome": "^0.2.0",
-    "@mdx-js/mdx": "^2.3.0",
-    "@mdx-js/react": "^2.3.0",
-    "gatsby": "^5.12.4",
-    "gatsby-plugin-manifest": "^5.12.0",
-    "gatsby-plugin-mdx": "^5.12.0",
-    "gatsby-plugin-sitemap": "^6.12.0",
-    "gatsby-source-filesystem": "^5.12.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "yarn": "^1.22.19"
-  }
+   "name": "SecurityBSides",
+   "version": "1.0.0",
+   "private": true,
+   "description": "SecurityBSides",
+   "author": "rlc4",
+   "keywords": [
+      "gatsby"
+   ],
+   "scripts": {
+      "develop": "gatsby develop",
+      "start": "gatsby develop",
+      " build": "gatsby build",
+      "serve": "gatsby serve",
+      "clean": "gatsby clean",
+      "deploy": "gatsby build && gh-pages -f -d public"
+   },
+   "dependencies": {
+      "@fortawesome/fontawesome-svg-core": "^6.4.2",
+      "@fortawesome/free-brands-svg-icons": "^6.4.2",
+      "@fortawesome/free-regular-svg-icons": "^6.4.2",
+      "@fortawesome/free-solid-svg-icons": "^6.4.2",
+      "@fortawesome/react-fontawesome": "^0.2.0",
+      "@mdx-js/mdx": "^2.3.0",
+      "@mdx-js/react": "^2.3.0",
+      "gatsby": "^5.12.4",
+      "gatsby-plugin-manifest": "^5.12.0",
+      "gatsby-plugin-mdx": "^5.12.0",
+      "gatsby-plugin-sitemap": "^6.12.0",
+      "gatsby-source-filesystem": "^5.12.0",
+      "gh-pages": "^6.0.0",
+      "react": "^18.2.0",
+      "react-dom": "^18.2.0",
+      "yarn": "^1.22.19"
+   }
 }
