--- a/package.json
+++ b/package.json
@@ -23,13 +23,20 @@
       "@fortawesome/react-fontawesome": "^0.2.0",
       "@mdx-js/mdx": "^2.3.0",
       "@mdx-js/react": "^2.3.0",
-      "gatsby": "^5.12.4",
+      "bootstrap": "^5.3.2",
+      "gatsby": "5.12",
       "gatsby-plugin-manifest": "^5.12.0",
       "gatsby-plugin-mdx": "^5.12.0",
+      "gatsby-plugin-sass": "^6.12.0",
+      "gatsby-plugin-sharp": "^5.12.0",
       "gatsby-plugin-sitemap": "^6.12.0",
+      "gatsby-remark-images": "^7.12.0",
       "gatsby-source-filesystem": "^5.12.0",
       "react": "^18.2.0",
+      "react-bootstrap": "^2.8.0",
       "react-dom": "^18.2.0",
+      "remark-gfm": "^4.0.0",
+      "sass": "^1.68.0",
       "yarn": "^1.22.19"
    }
 }
